--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -9,16 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "create-react-class": "^15.7.0",
-    "expo": "^51.0.7",
+    "expo": "~51.0.8",
     "expo-status-bar": "~1.12.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-reanimated": "~3.10.1",
     "react-native-settings-list": "^1.8.0"
   },
   "devDependencies": {
