--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-settings-list": "^1.8.0"
   },
