--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -24,6 +24,8 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-settings-list": "^1.8.0",
     "react-native-svg": "^15.2.0"
   },
