--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -20,12 +20,14 @@
     "@react-navigation/stack": "^6.3.29",
     "create-react-class": "^15.7.0",
     "expo": "~51.0.8",
+    "expo-image-picker": "^15.0.5",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-modal": "^13.0.1",
     "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
