--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -33,10 +33,11 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-settings-list": "^1.8.0",
-    "react-native-svg": "^15.2.0"
+    "react-native-svg": "^15.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.4.0"
   },
   "private": true
 }
